@@ -1,3 +1,8 @@
+2009-01-13 Takuro Ashie <ashie@homa.ne.jp>
+
+	* src/prefs.c, src/gimv_thumb_win.c: Remove walllpaper settings because
+	they are obsolete.
+
 2009-01-08 Takuro Ashie <ashie@homa.ne.jp>
 
 	* src/utils_auto_comp.c: Fix a crash bug on selecting an auto completion
